# Easy-CapCut-Draft

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  start.sh  test_video_gen.py
Easy-Capcut-draft/: bruno.json  (+13 more)
backend/: .env.example  .gitignore  backend_log.txt  debug_api.py  debug_url.py  pyproject.toml  requirements.txt  result_extracted_text.txt  test_ai_connection.py  test_all.py  test_anthropic.py  test_enhance.py  test_enhance_script.py  test_hf.py  test_improved_scraper.py  test_proxy.py  test_run.sh  test_storyboard.py  test_tts.py  test_url_extract.py  test_vision.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: ai_content.py  ai_content.py.bak  auth.py  media.py  projects.py  test.py  video_gen.py
backend/app/core/: auth.py  config.py  database.py  prompts.py
backend/app/models/: models.py
backend/app/providers/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  gemini_video_understanding.py  huggingface.py  openai_compat.py
backend/app/providers/spaces/: __init__.py  base.py  image_turbo.py  music_gen.py  tts_qwen.py  video_i2v.py  video_wan.py
backend/app/schemas/: ai_schemas.py  auth_schemas.py  schemas.py
backend/app/scraper/: capture_website.py  full_capture.py  result_api_data.json  result_extracted_text.txt  result_source.html
backend/app/services/: ai_service.py  ai_service_v2.py  crud.py
backend/app/services/video/: ai_video_engine.py  capcut_builder.py  direct_renderer.py  manager.py  schemas.py
backend/docs/: URL_EXTRACTION_GUIDE.md
(+49 files in other folders)
